--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasan||Protfolio </title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Hasan Ali</span> World!</h1>
+            <h2>I am a Fuska <span class="tomato">Web-Developer</span> </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt adipisci consectetur expedita non
+                distinctio natus tempora, atque enim similique cum saepe temporibus doloribus deleniti.</p>
+            <a class="link-button" target="_black" href="#">Hire Me!</a>    
+        </div>
+        <div class="half-width">
+            <img src="images/hasan2.png" alt="hasan/image">
+        </div>
+    </section>
 </body>
+
 </html>
