added dream area

--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
             <h2>I am a Fuska <span class="tomato">Web-Developer</span> </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt adipisci consectetur expedita non
                 distinctio natus tempora, atque enim similique cum saepe temporibus doloribus deleniti.</p>
-            <a class="link-button" target="_black" href="#">Hire Me!</a>    
+            <a class="link-button" target="_black" href="#">Hire Me!</a>
         </div>
         <div class="half-width">
             <img src="images/hasan2.png" alt="hasan/image">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/hasan4.png" alt="hasan/image">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web-Developer</h2>
+            <p class="padding-right">I already learned the basic HTML and CSS. I can build any simple website. I can
+                even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced
+                topics.</p>
+            <a target="_blank" class="link-button" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
