added my experience and footer area

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
-            <h1>Welcome To</h1>
+            <h1 class="no-padding">Welcome To</h1>
             <h1><span class="orange">Hasan Ali</span> World!</h1>
             <h2>I am a Fuska <span class="tomato">Web-Developer</span> </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt adipisci consectetur expedita non
@@ -26,11 +26,11 @@
             <a class="link-button" target="_black" href="#">Hire Me!</a>
         </div>
         <div class="half-width">
-            <img src="images/hasan2.png" alt="hasan/image">
+            <img src="images/hasan1.png" alt="hasan/image">
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/hasan4.png" alt="hasan/image">
         </div>
@@ -43,6 +43,31 @@
             <a target="_blank" class="link-button" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack-item" class="exp-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="babby-item" class="exp-item">
+                <h2>Babby Web-Developer</h2>
+                <h3 class="orange">2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>
+            © Hasan Ali 2021, a Programming Hero initiative.
+        </p>
+    </footer>
 </body>
 
 </html>
