added new color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="half-width">
             <h1 class="no-padding">Welcome To</h1>
             <h1><span class="orange">Hasan Ali</span> World!</h1>
-            <h2>I am a Fuska <span class="tomato">Web-Developer</span> </h2>
+            <h3>I am a Fuska <span class="tomato">Web-Developer</span> </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt adipisci consectetur expedita non
                 distinctio natus tempora, atque enim similique cum saepe temporibus doloribus deleniti.</p>
             <a class="link-button" target="_black" href="#">Hire Me!</a>
@@ -36,7 +36,7 @@
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h2>Become a Web-Developer</h2>
+            <h3>Become a <span class="tomato">Web-Developer</span> </h3>
             <p class="padding-right">I already learned the basic HTML and CSS. I can build any simple website. I can
                 even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced
                 topics.</p>
@@ -47,16 +47,16 @@
         <h1>Experience</h1>
         <div class="flexible-container">
             <div id="full-stack-item" class="exp-item">
-                <h2>Full Stack Web Developer</h2>
-                <h3 class="orange">2022-Present | Pro Level Developer</h3>
+                <h2>Full Stack <span class="tomato">Web-Developer</span></h2>
+                <h4 class="orange">2022-Present | Pro Level Developer</h4>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
             <div id="babby-item" class="exp-item">
-                <h2>Babby Web-Developer</h2>
-                <h3 class="orange">2021-2022 | Programming Hero Learner</h3>
+                <h2>Babby <span class="tomato">Web-Developer</span></h2>
+                <h4 class="orange">2021-2022 | Programming Hero Learner</h4>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
                 </p>
