--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="half-width">
             <h1 class="no-padding">Welcome To</h1>
             <h1><span class="orange">Hasan Ali</span> World!</h1>
-            <h3>I am a Fuska <span class="tomato">Web-Developer</span> </h3>
+            <h3>I am a Jonior <span class="tomato">Web-Developer</span> </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt adipisci consectetur expedita non
                 distinctio natus tempora, atque enim similique cum saepe temporibus doloribus deleniti.</p>
             <a class="link-button" target="_black" href="#">Hire Me!</a>
